--- a/1_notmnist.ipynb
+++ b/1_notmnist.ipynb
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 37,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -873,9 +873,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training (200000, 28, 28) (200000,)\n",
-      "Validation (10000, 28, 28) (10000,)\n",
-      "Testing (10000, 28, 28) (10000,)\n"
+      "Training: (200000, 28, 28) (200000,)\n",
+      "Validation: (10000, 28, 28) (10000,)\n",
+      "Testing: (10000, 28, 28) (10000,)\n"
      ]
     }
    ],
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 38,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 39,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 40,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -1073,7 +1073,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Compressed pickle size: 718193801\n"
+      "Compressed pickle size: 690800506\n"
      ]
     }
    ],
